--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1>multi 02</h1>
+<iframe title="Report Section" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiZmU3NGVkNGYtZTE0OS00OTZjLTgxYzUtYzM0YjgzNjU0Nzg2IiwidCI6IjYzYThkMmY1LTUzYTgtNDcwMi1iMjVmLWZhZWM3ODE0MTk5OSJ9" frameborder="0" allowFullScreen="true"></iframe>
